syntax = "proto2";

package protos.soc;

enum Resource {
    UNKNOWN_RESOURCE = 0;
    BRICK = 1;
    ORE = 2;
    SHEEP = 3;
    WHEAT = 4;
    WOOD = 5;
}

enum DevelopmentCard {
    UNKNOWN_DEVELOPMENT_CARD = 0;
    KNIGHT = 1;
    YEAR_OF_PLENTY = 2;
    MONOPOLY = 3;
    ROAD_BUILDER = 4;
    VICTORY_POINT = 5;
}

message ResourceCount {
    required Resource type = 1;
    required int32 count = 2;
}

message DevelopmentCardSpecification {
    required DevelopmentCard type = 1;
    optional int32 turn_purchased = 2;
    optional int32 turn_played = 3;
}

message ProbableResourceSet {
    message ProbableCardValue {
        required Resource type = 1;
        required int32 known_amount = 2;
        required double unknown_amount = 3;
    }
    repeated ProbableCardValue probable_resource_cards = 1;
}

message PossibleHands {

    message HandCombination {
        message HandsWithMultiplier {
            repeated ResourceCount cards = 1;
            required int32 multiplier = 2;
        }
        map<int32, HandsWithMultiplier> hand = 1;
    }
    repeated HandCombination hands = 1;
}

message PublicInventory {
    required int32 card_count = 1;
    required int32 development_card_count = 2;
    repeated DevelopmentCardSpecification played_development_cards = 3;
}

message PrivateInventory {
    repeated ResourceCount resource_cards = 1;
    repeated DevelopmentCardSpecification unplayed_development_cards = 2;
}

message Inventory {
    oneof inventory {
        PublicInventory public = 1;
        PrivateInventory private = 2;
    }
}




